<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calculator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_app"
    android:layout_gravity="center"
    >

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_calculator"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/genders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_calculator"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/masc_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dp"
            app:cardCornerRadius="25dp" >


            <ImageView
                android:id="@+id/masc_symbol"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@color/bg_bubbles"
                android:padding="20dp"
                android:src="@drawable/simbolomasc"
                android:contentDescription="@string/masculino"
                />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/fem_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            app:cardCornerRadius="25dp">


            <ImageView
                android:id="@+id/fem_symbol"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@color/bg_bubbles"
                android:padding="20dp"
                android:src="@drawable/simbolofem"
                android:contentDescription="@string/femenino"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genders"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_margin="10dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/bg_bubbles"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/altura"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:padding="10dp"/>

                <TextView
                    android:id="@+id/altura"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    />

                <com.google.android.material.slider.RangeSlider
                    android:id="@+id/medidor_altura"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stepSize="1"
                    android:valueFrom="120"
                    android:valueTo="200"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/medidores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height">

        <androidx.cardview.widget.CardView
            android:id="@+id/medidor_peso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            app:cardCornerRadius="25dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="10dp"
                android:background="@color/bg_bubbles">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/peso"
                    android:textAlignment="center"
                    android:textColor="@color/white"/>
                <TextView
                    android:id="@+id/peso_valor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textAlignment="center"
                    android:textColor="@color/white" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >
                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fab_minus_peso"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/minus"
                        android:src="@drawable/minus_icon_white"
                        android:layout_marginEnd="2dp"
                        />
                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fab_plus_peso"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/plus_icon_white"
                        android:contentDescription="@string/plus"
                        android:layout_marginStart="2dp"
                        />
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/medidor_edad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            app:cardCornerRadius="25dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="10dp"
                android:background="@color/bg_bubbles">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edad"
                    android:textAlignment="center"
                    android:textColor="@color/white" />
                <TextView
                    android:id="@+id/edad_valor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textAlignment="center"
                    android:textColor="@color/white" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >
                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fab_minus_edad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/minus_icon_white"
                        android:contentDescription="@string/minus"
                        android:layout_marginEnd="2dp"
                        />
                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fab_plus_edad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/plus_icon_white"
                        android:contentDescription="@string/plus"
                        android:layout_marginStart="2dp"
                        />
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <Button
        android:id="@+id/boton_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medidores"
        android:backgroundTint="@color/bg_buttons"
        android:text="@string/calcular"
        app:layout_constraintCircleRadius="5dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>